fix: swap wrong color hover on hero buttons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,8 @@
 @layer components {
     .heroButton {
         @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs
-        tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
-        dark:border-light-border dark:text-light-secondary dark:hover:border-light-accent dark:hover:text-light-accent;
+        tracking-widest text-gray-500 transition-all hover:border-[#3B82F6]/40 hover:text-[#3B82F6]/40
+        dark:border-light-border dark:text-light-secondary dark:hover:border-[#F7AB0A]/40 dark:hover:text-[#F7AB0A]/40;
     }
 
     .contactInput {
